--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "graphql": "^15.6.1",
     "graphql-request": "^3.5.0",
     "html-react-parser": "^1.4.0",
@@ -26,6 +27,7 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@angular/cli": "^13.1.2",
     "autoprefixer": "^10.3.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
